--- a/SIGTR/dashboard/templates/dashboard/admin/modalGrafico.html
+++ b/SIGTR/dashboard/templates/dashboard/admin/modalGrafico.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% block content %}
-<!--MODAL TICKERS-->
+<!--MODAL TICKETS-->
 <div id="modalTicket" class="modal">
     <div class="modal-content" id="contentTickets">
         <div class="headerModal">
@@ -23,25 +23,24 @@
         </div>
     </div>
 </div>
-<!--MODAL TICKERS-->
-<!-- <div id="modalTicket" class="modal">
-    <div class="modal-content" id="contentTickets">
+<!--MODAL SERVICIOS-->
+<div id="modalService" class="modal">
+    <div class="modal-content" id="contentService">
         <div class="headerModal">
-            <span id="closeModalTicket" class="close">&times;</span>
-            <div class="textHW">GESTIÓN DE TICKETS</div>
+            <span id="closeModalService" class="close">&times;</span>
+            <div class="textHW">GESTIÓN DE SERVICIOS</div>
         </div>
         <div class="detalleModal">
             <div class="contentDetalle">
                 <div class="type">
                     <div class="contentType">
-                        <div class="textType">RESUELTO</div>
                     </div>
                 </div>
             </div>
             <div class="contentDetalle">
-                <canvas id="donutsTicketsDet" class="donutsTickets"></canvas>
+                <canvas id="linealServiciosDet" class="linealServicios"></canvas>
             </div>
         </div>
     </div>
-</div> -->
+</div>
 {% endblock %}
