--- a/SIGTR/users/templates/users/vistaInicial.html
+++ b/SIGTR/users/templates/users/vistaInicial.html
@@ -53,9 +53,9 @@
                 <div class="asistente">
                     <div class="asistVirtual">ASISTENTE VIRTUAL DE SOPORTE TÉCNICO</div>
                     <div class="botonAsist">
-                        <button class="buttonAsist" onclick="login()">
-                            <div class="iconLogin"><i class="fa-solid fa-user"></i></div>
-                            <div class="textLogin">INICIAR SESIÓN</div>
+                        <button class="buttonAsist" onclick="login()" id="glitch">
+                            <span  class="iconLogin"><i class="fa-solid fa-user"></i></span>
+                            <span class="textLogin">INICIAR SESIÓN</span>
                         </button>
                     </div>
                     <div class="datosDesktop">
