--- a/SIGTR/dashboard/templates/dashboard/base_dashboard.html
+++ b/SIGTR/dashboard/templates/dashboard/base_dashboard.html
@@ -23,7 +23,7 @@
     {% if user.role == 'client' %}
     <link rel="stylesheet" href="{% static 'dashboard/css/client.css' %}">
     {% elif user.role == 'admin' %}
-    <link rel="stylesheet" href="{% static 'dashboard/css/dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'dashboard/css/admin/dashboard.css' %}">
     {% elif user.role == 'tech' %}
     <link rel="stylesheet" href="{% static 'dashboard/css/tech.css' %}">
     {% endif %}
@@ -43,7 +43,7 @@
                 <li class="nav-item">
                     <a class="nav-link text-white {% if request.resolver_match.url_name == 'admin_dashboard' %}active{% endif %}"
                         href="{% url 'admin_inicio' %}">
-                        <i class="fas fa-home me-2"></i> Inicio
+                        <i class="fas fa-home me-2"></i> Home
                     </a>
                 </li>
                 <li class="nav-item">
@@ -56,7 +56,7 @@
                 <li class="nav-item">
                     <a class="nav-link text-white {% if request.resolver_match.url_name == 'add_admin' %}active{% endif %}"
                         href="{% url 'add_admin' %}">
-                        <i class="fas fa-user-shield me-2"></i> Agregar Administrador
+                        <i class="fas fa-user-shield me-2"></i> Administrador
                     </a>
                 </li>
                 {% endif %}
@@ -68,16 +68,11 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white {% if request.resolver_match.url_name == 'inactive_users' %}active{% endif %}"
-                        href="{% url 'inactive_users' %}">
-                        <i class="fas fa-user-slash me-2"></i> Productos
+                        href="{% url 'category_list' %}">
+                       <i class="fas fa-tags me-2"></i> Categorías
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white {% if request.resolver_match.url_name == 'video_list' %}active{% endif %}"
-                        href="{% url 'video_list' %}">
-                        <i class="fas fa-video me-2"></i> Recomendaciones de Video
-                    </a>
-                </li>
+
                 <li class="nav-item">
                     <a class="nav-link text-white d-flex justify-content-between align-items-center" href="#"
                         role="button" id="productToggle" data-bs-toggle="collapse" data-bs-target="#productSubmenu"
@@ -90,29 +85,55 @@
                     <ul class="collapse list-unstyled ps-4" id="productSubmenu">
                         <li>
                             <a class="nav-link text-white {% if request.resolver_match.url_name == 'product_list' %}active{% endif %}"
-                                href="{% url 'product_list' %}">
-                                <i class="fas fa-list me-2"></i> Listar Productos
+                                 href="{% url 'product_list' %}">
+                                <i class="bi bi-list me-2"></i> Listar Productos
                             </a>
                         </li>
                         <li>
                             <a class="nav-link text-white {% if request.resolver_match.url_name == 'product_create' %}active{% endif %}"
                                 href="{% url 'product_create' %}">
-                                <i class="fas fa-plus me-2"></i> Agregar Producto
+                                <i class="fas fa-plus me-2"></i> Cursos
                             </a>
                         </li>
                         <li>
-                            <a class="nav-link text-white {% if request.resolver_match.url_name == 'category_list' %}active{% endif %}"
-                                href="{% url 'category_list' %}">
-                                <i class="fas fa-tags me-2"></i> Categorías
-                            </a>
-                        </li>
-                        <li>
-                            <a class="nav-link text-white {% if request.resolver_match.url_name == 'sales_report' %}active{% endif %}"
-                                href="{% url 'sales_report' %}">
-                                <i class="fas fa-chart-line me-2"></i> Reporte de Ventas
+                            <a class="nav-link text-white {% if request.resolver_match.url_name == 'product_create' %}active{% endif %}"
+                                href="{% url 'product_create' %}">
+                                <i class="fas fa-plus me-2"></i> Servicios
                             </a>
                         </li>
                     </ul>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link text-white d-flex justify-content-between align-items-center" href="#"
+                        role="button" id="productToggle" data-bs-toggle="collapse" data-bs-target="#productSubmenu"
+                        aria-expanded="false" aria-controls="productSubmenu">
+                        <span>
+                            <i class="bi bi-clipboard2-data-fill me-2"></i> Gestión de Ventas
+                        </span>
+                        <i class="fas fa-chevron-down"></i>
+                    </a>
+                    <ul class="collapse list-unstyled ps-4" id="productSubmenu">
+                        <li>
+                            <a class="nav-link text-white {% if request.resolver_match.url_name == 'product_list' %}active{% endif %}"
+                                href="{% url 'sales_report' %}">
+                                <i class="bi bi-graph-up-arrow me-2"></i> Reporte de Ventas
+                            </a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-white {% if request.resolver_match.url_name == 'product_create' %}active{% endif %}"
+                                href="{% url 'product_create' %}">
+                                <i class="fas fa-plus me-2"></i> Agregar Venta
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link text-white {% if request.resolver_match.url_name == 'video_list' %}active{% endif %}"
+                        href="{% url 'video_list' %}">
+                        <i class="fas fa-video me-2"></i> Recomendaciones de Video
+                    </a>
                 </li>
 
                 {% elif request.user.role == 'client' %}
@@ -257,7 +278,7 @@
     <!-- Footer Scripts -->
     {% if request.user.role == 'admin' %}
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="{% static 'dashboard/js/admin_dashboard.js' %}" defer></script>
+    <script src="{% static 'dashboard/js/admin/categoria.js' %}"></script>
     <script src="{% static 'dashboard/js/admin/cliente.js' %}"></script>
     <script src="{% static 'dashboard/js/admin/tecnico.js' %}"></script>
     {% elif request.user.role == 'client' %}
