--- a/SIGTR/tickets/templates/tickets/modalAsistencia.html
+++ b/SIGTR/tickets/templates/tickets/modalAsistencia.html
@@ -64,6 +64,10 @@
                 </div>
                 <div class="botonesAsistencia">
                     <div class="botones"><button type="submit" class="btnAsistencia" id="btnAsistencia">SOLICITAR</button></div>
+                    <!-- <div class="botones">
+                        <a href="https://goo.su/V3JAvi" target="_blank"><i
+                                class="fa-brands fa-whatsapp fa-fade btnAsistencia"></i>CONTACTAR</a> -->
+                        
                 </div>
                 <input type="hidden" id="id_latitude" name="latitude">
                 <input type="hidden" id="id_longitude" name="longitude">
