--- a/SIGTR/dashboard/templates/dashboard/client/inicio.html
+++ b/SIGTR/dashboard/templates/dashboard/client/inicio.html
@@ -96,6 +96,11 @@
                                 <source src="{% static 'dashboard/video/robotHablando.mp4' %}" type="video/mp4">
                             </video>
                         </div>
+                        <div class="video-container" id="video-container2" style="display: none;">
+                            <video class="robot" id="robotGIFOjos" loop autoplay muted>
+                                <source src="{% static 'dashboard/video/robotOjos.mp4' %}" type="video/mp4">
+                            </video>
+                        </div>
                         <audio controls autoplay muted id="audioRobot">
                             <source src="{% static 'dashboard/audio/audioRobot.mp3' %}">
                             no se encontró ningún audio
